--- a/demeter-delivery/src/index.css
+++ b/demeter-delivery/src/index.css
@@ -43,6 +43,11 @@ html {
   min-height: 100vh; /* Asegura que ocupe al menos toda la ventana */
 }
 
-main {
-  padding: 1rem; /* Espaciado interno */
+.main-home {
+  padding: 0; 
 }
+
+main {
+  padding: 1rem;
+}
+
